--- a/index.html
+++ b/index.html
@@ -33,141 +33,76 @@
 
             <ul class="dropdown_menu dropdown_dest">
               <li>
-                <a href="#">
-                  <i class="fas fa-umbrella-beach icon-sharm"></i>
-                  Sharm El-Sheikh
-                </a>
+                <a href="#"> Sharm El-Sheikh </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-water icon-hurghada"></i>
-                  Hurghada
-                </a>
+                <a href="#"> Hurghada </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-landmark icon-cairo"></i>
-                  Cairo
-                </a>
+                <a href="#"> Cairo </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-monument icon-luxor"></i>
-                  Luxor
-                </a>
+                <a href="#"> Luxor </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-fish icon-marsa"></i>
-                  Marsa Alam
-                </a>
+                <a href="#"> Marsa Alam </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-hotel icon-gouna"></i>
-                  El Gouna
-                </a>
+                <a href="#"> El Gouna </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-water icon-makadi"></i>
-                  Makadi Bay
-                </a>
+                <a href="#"> Makadi Bay </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-ship icon-safaga"></i>
-                  Safaga
-                </a>
+                <a href="#"> Safaga </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-umbrella-beach icon-sahl"></i>
-                  Sahl Hasheesh
-                </a>
+                <a href="#"> Sahl Hasheesh </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-swimming-pool icon-soma"></i>
-                  Soma Bay
-                </a>
+                <a href="#"> Soma Bay </a>
               </li>
             </ul>
           </li>
           <li class="nav_link dropdown">
-            <a href="#"
-              ><i class="fas fa-th-list"></i> <span>Tour Category</span></a
-            >
+            <a href="#"> <span>Tour Category</span></a>
 
             <ul class="dropdown_menu">
               <li>
-                <a href="#">
-                  <i class="fas fa-landmark"></i>
-                  Historical Tours
-                </a>
+                <a href="#"> Historical Tours </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-ship"></i>
-                  Boat Tours
-                </a>
+                <a href="#"> Boat Tours </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-truck-monster"></i>
-                  Safari Tours
-                </a>
+                <a href="#"> Safari Tours </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-water"></i>
-                  Water Sports
-                </a>
+                <a href="#"> Water Sports </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-calendar-alt"></i>
-                  Multi-Day Tours
-                </a>
+                <a href="#"> Multi-Day Tours </a>
               </li>
             </ul>
           </li>
           <li class="nav_link dropdown">
-            <a href="#"
-              ><i class="fas fa-map-marked-alt guide-icon"></i>
-              <span>Travel Guide</span></a
-            >
+            <a href="#"> <span>Travel Guide</span></a>
 
             <ul class="dropdown_menu">
               <li>
-                <a href="#">
-                  <i class="fas fa-umbrella-beach icon-hurghada"></i>
-                  Hurghada Guide
-                </a>
+                <a href="#"> Hurghada Guide </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-water icon-sharm"></i>
-                  Sharm El-Sheikh Guide
-                </a>
+                <a href="#"> Sharm El-Sheikh Guide </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-landmark icon-cairo"></i>
-                  Cairo Guide
-                </a>
+                <a href="#"> Cairo Guide </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-monument icon-luxor"></i>
-                  Luxor Guide
-                </a>
+                <a href="#"> Luxor Guide </a>
               </li>
               <li>
-                <a href="#">
-                  <i class="fas fa-fish icon-marsa"></i>
-                  Marsa Alam Guide
-                </a>
+                <a href="#"> Marsa Alam Guide </a>
               </li>
             </ul>
           </li>
@@ -664,8 +599,15 @@
           <!-- Search Hero Section -->
           <div class="search_hero">
             <form action="/search" method="GET" class="search-form">
-                <input type="text" name="q" placeholder="Search for destinations, tours..." required>
-                <button type="submit"><i class="fas fa-search"></i> Search</button>
+              <input
+                type="text"
+                name="q"
+                placeholder="Search for destinations, tours..."
+                required
+              />
+              <button type="submit">
+                <i class="fas fa-search"></i> <span>Search</span>
+              </button>
             </form>
 
             <!--  -->
@@ -673,6 +615,100 @@
         </div>
       </div>
     </section>
+
+
+
+
+       <!-- Features Section -->
+    <section class="features-section">
+      <div class="container">
+        <div class="features-grid">
+          <div class="feature-item">
+            <div class="feature-icon">
+              <i class="fas fa-shield-alt" aria-hidden="true"></i>
+            </div>
+            <div class="feature-content">
+              <h6>No Hidden Costs</h6>
+              <p>All-inclusive with transfers</p>
+            </div>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">
+              <i class="fas fa-medal" aria-hidden="true"></i>
+            </div>
+            <div class="feature-content">
+              <h6>Best Price Guarantee</h6>
+              <p>Unmatched quality & price</p>
+            </div>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">
+              <i class="fas fa-thumbs-up" aria-hidden="true"></i>
+            </div>
+            <div class="feature-content">
+              <h6>Top Rated Reviews</h6>
+              <p>Real customer videos & reviews</p>
+            </div>
+          </div>
+
+          <div class="feature-item">
+            <div class="feature-icon">
+              <i class="fas fa-calendar-check" aria-hidden="true"></i>
+            </div>
+            <div class="feature-content">
+              <h6>Flexible Policy</h6>
+              <p>Cancel 12h | Change 4h before</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
+    <div class="descount_banner">
+      <div class="container">
+          <a href="cart.html" class="descount_banner_item clickable-banner">
+
+            <div class="div_img">
+              <img
+                src="https://egyptra.pro/uploads/photo_library/photo_67bc30811b730.jpg"
+                alt=""
+              />
+            </div>
+
+            <div class="content">
+              <div class="text">
+                <h4>Enjoy Summer Deals</h4>
+                <h3>Up to 40% Discount!</h3>
+                <span class="btn"
+                  >See Details
+                  <svg
+                    width="21"
+                    height="16"
+                    viewBox="0 0 21 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.0017 8.00001H19.9514M19.9514 8.00001L12.9766 1.02515M19.9514 8.00001L12.9766 14.9749"
+                      stroke="currentColor"
+                      stroke-width="1.77778"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    ></path></svg></span>
+              </div>
+              <img src="img/sm_icon_baanner.webp" alt="" />
+            </div>
+
+          </a>
+      </div>
+    </div>
+
+ 
 
     <!-- JavaScript -->
     <script src="js/script.js"></script>
