--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- font awesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
 
     <!-- Link Swiper's CSS -->
@@ -1517,7 +1517,7 @@
                 </div>
             </div>
           </div>
-          
+
 
 
         </div>
@@ -1564,18 +1564,79 @@
       </div>
     </div>
 
+
+    <footer>
+        <div class="container">
+
+            <div class="big_row">
+                <img class="logo_footer" src="img/logo.png" alt="Egyptra">
+
+                <p>Discover the magic of Egypt with our expertly crafted tours and unforgettable experiences.</p>
+
+                <div class="icons_footer">
+                    <a href="tel:+201234567890"><i class="fas fa-phone"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <h4>Popular Destinations</h4>
+
+                <div class="links">
+                    <a href="#"><i class="fas fa-caret-right"></i> Cairo & Pyramids</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Luxor & Valley of Kings</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Aswan & Abu Simbel</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Red Sea Resorts</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Nile Cruises</a>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <h4>Quick Links</h4>
+
+                <div class="links">
+                    <a href="#"><i class="fas fa-caret-right"></i> About Us</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Tour Packages</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Book Now</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Travel Guide</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Contact Us</a>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <h4>Support</h4>
+
+                <div class="links">
+                    <a href="#"><i class="fas fa-caret-right"></i> Customer Support</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Terms & Conditions</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Privacy Policy</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> Help Center</a>
+                    <a href="#"><i class="fas fa-caret-right"></i> FAQs</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="bottom_footer">
+            <div class="container">
+                <p>&copy; 2024 <span>Egyptra.</span> All Rights Reserved.</p>
+
+                <div class="payment_img">
+                    <i class="fas fa-credit-card"></i>
+                    <i class="fab fa-cc-visa"></i>
+                    <i class="fab fa-cc-mastercard"></i>
+                    <i class="fab fa-paypal"></i>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <!-- Initialize Swiper -->
-    <script>
-      var swiper = new Swiper(".mySwiper", {
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-      });
-    </script>
 
     <!-- JavaScript -->
     <script src="js/header.js"></script>
