--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
               </div>
               <button
                 class="btn_share"
-                onclick="event.stopPropagation();event.preventDefault();toggleShare(event,'tour-1')"
+                onclick="toggleShare(event)"
                 aria-label="Share tour"
                 aria-expanded="false"
                 aria-haspopup="true"
@@ -801,7 +801,7 @@
                 <i class="fas fa-share-alt" aria-hidden="true"></i>
               </button>
 
-              <div class="share-dropdown" id="share-tour-1" role="menu">
+              <div class="share-dropdown" role="menu">
                 <a
                   href="https://www.facebook.com/sharer/sharer.php?u=https://egyptra.com/tours"
                   target="_blank"
@@ -850,7 +850,7 @@
                 <button
                   class="share-option"
                   role="menuitem"
-                  onclick="event.stopPropagation();copyLink('https://egyptra.com/tours','tour-1')"
+                  onclick="copyLink(event, 'https://egyptra.com/tours')"
                   type="button"
                 >
                   <i
@@ -914,7 +914,7 @@
               </div>
               <button
                 class="btn_share"
-                onclick="event.stopPropagation();event.preventDefault();toggleShare(event,'tour-1')"
+                onclick="toggleShare(event)"
                 aria-label="Share tour"
                 aria-expanded="false"
                 aria-haspopup="true"
@@ -923,7 +923,7 @@
                 <i class="fas fa-share-alt" aria-hidden="true"></i>
               </button>
 
-              <div class="share-dropdown" id="share-tour-1" role="menu">
+              <div class="share-dropdown" role="menu">
                 <a
                   href="https://www.facebook.com/sharer/sharer.php?u=https://egyptra.com/tours"
                   target="_blank"
@@ -972,7 +972,7 @@
                 <button
                   class="share-option"
                   role="menuitem"
-                  onclick="event.stopPropagation();copyLink('https://egyptra.com/tours','tour-1')"
+                  onclick="copyLink(event, 'https://egyptra.com/tours')"
                   type="button"
                 >
                   <i
@@ -1037,7 +1037,7 @@
               </div>
               <button
                 class="btn_share"
-                onclick="event.stopPropagation();event.preventDefault();toggleShare(event,'tour-1')"
+                onclick="toggleShare(event)"
                 aria-label="Share tour"
                 aria-expanded="false"
                 aria-haspopup="true"
@@ -1046,7 +1046,7 @@
                 <i class="fas fa-share-alt" aria-hidden="true"></i>
               </button>
 
-              <div class="share-dropdown" id="share-tour-1" role="menu">
+              <div class="share-dropdown" role="menu">
                 <a
                   href="https://www.facebook.com/sharer/sharer.php?u=https://egyptra.com/tours"
                   target="_blank"
@@ -1095,7 +1095,7 @@
                 <button
                   class="share-option"
                   role="menuitem"
-                  onclick="event.stopPropagation();copyLink('https://egyptra.com/tours','tour-1')"
+                  onclick="copyLink(event, 'https://egyptra.com/tours')"
                   type="button"
                 >
                   <i
@@ -1159,7 +1159,7 @@
               </div>
               <button
                 class="btn_share"
-                onclick="event.stopPropagation();event.preventDefault();toggleShare(event,'tour-1')"
+                onclick="toggleShare(event)"
                 aria-label="Share tour"
                 aria-expanded="false"
                 aria-haspopup="true"
@@ -1168,7 +1168,7 @@
                 <i class="fas fa-share-alt" aria-hidden="true"></i>
               </button>
 
-              <div class="share-dropdown" id="share-tour-1" role="menu">
+              <div class="share-dropdown" role="menu">
                 <a
                   href="https://www.facebook.com/sharer/sharer.php?u=https://egyptra.com/tours"
                   target="_blank"
@@ -1217,7 +1217,7 @@
                 <button
                   class="share-option"
                   role="menuitem"
-                  onclick="event.stopPropagation();copyLink('https://egyptra.com/tours','tour-1')"
+                  onclick="copyLink(event, 'https://egyptra.com/tours')"
                   type="button"
                 >
                   <i
@@ -1281,7 +1281,7 @@
               </div>
               <button
                 class="btn_share"
-                onclick="event.stopPropagation();event.preventDefault();toggleShare(event,'tour-1')"
+                onclick="toggleShare(event)"
                 aria-label="Share tour"
                 aria-expanded="false"
                 aria-haspopup="true"
@@ -1290,7 +1290,7 @@
                 <i class="fas fa-share-alt" aria-hidden="true"></i>
               </button>
 
-              <div class="share-dropdown" id="share-tour-1" role="menu">
+              <div class="share-dropdown" role="menu">
                 <a
                   href="https://www.facebook.com/sharer/sharer.php?u=https://egyptra.com/tours"
                   target="_blank"
@@ -1339,7 +1339,7 @@
                 <button
                   class="share-option"
                   role="menuitem"
-                  onclick="event.stopPropagation();copyLink('https://egyptra.com/tours','tour-1')"
+                  onclick="copyLink(event, 'https://egyptra.com/tours')"
                   type="button"
                 >
                   <i
@@ -1404,7 +1404,7 @@
               </div>
               <button
                 class="btn_share"
-                onclick="event.stopPropagation();event.preventDefault();toggleShare(event,'tour-1')"
+                onclick="toggleShare(event)"
                 aria-label="Share tour"
                 aria-expanded="false"
                 aria-haspopup="true"
@@ -1413,7 +1413,7 @@
                 <i class="fas fa-share-alt" aria-hidden="true"></i>
               </button>
 
-              <div class="share-dropdown" id="share-tour-1" role="menu">
+              <div class="share-dropdown" role="menu">
                 <a
                   href="https://www.facebook.com/sharer/sharer.php?u=https://egyptra.com/tours"
                   target="_blank"
@@ -1462,7 +1462,7 @@
                 <button
                   class="share-option"
                   role="menuitem"
-                  onclick="event.stopPropagation();copyLink('https://egyptra.com/tours','tour-1')"
+                  onclick="copyLink(event, 'https://egyptra.com/tours')"
                   type="button"
                 >
                   <i
