--- a/index.html
+++ b/index.html
@@ -770,6 +770,9 @@
             </div>
           </a>
         </div>
+
+        <div class="div_btns btns_btm_sec">
+            <a href="#" class="btn">Explore All Tours <i class="fas fa-arrow-right arrow_rotate"></i></a>
       </div>
     </section>
 
@@ -1523,6 +1526,10 @@
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
+
+              <div class="div_btns btns_btm_sec">
+            <a href="#" class="btn">Explore All Tours <i class="fas fa-arrow-right arrow_rotate"></i></a>
+        </div>
       </div>
     </section>
 
@@ -1567,8 +1574,8 @@
 
     <section class="categories">
             <div class="head_sec">
-        <h2>Top Egypt Destinations</h2>
-        <p>Discover the most popular tourist destinations & attractions</p>
+        <h2>Safari Tours in Egypt & Boat Tours Categories</h2>
+        <p>Explore the best safari tours in Egypt, boat tours, diving excursions, and historical journeys</p>
       </div>
 
         <div class="container swiper mySwiper categories-swiper">
@@ -1721,6 +1728,10 @@
         </div>
            <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
+
+        <div class="div_btns btns_btm_sec">
+            <a href="#" class="btn">View All Categories <i class="fas fa-arrow-right arrow_rotate"></i></a>
+        </div>
         </div>
     </section>
 
