--- a/index.html
+++ b/index.html
@@ -679,8 +679,8 @@
 
       <div class="container">
         <div class="div_text">
-          <h6>Dream Your Next Trip</h6>
-          <h2>discover when even <br>
+          <h6 class="head_sm_title">Dream Your Next Trip</h6>
+          <h2 class="head_title">discover when even <br>
               you want to go</h2>
           <p class="p_about">Are you tired of the typical tourist destinations and looking to step out of your comfort zone? Adventure travel may be the perfect solution for you! Here are four.</p>
 
@@ -725,8 +725,9 @@
       <img class="img_design_sec  dest_left_img" src="img/plan1.webp" alt="">
       <img class="img_design_sec  dest_right_img" src="img/cloude-1-2.png" alt="">
       <div class="head_sec">
-        <h2>Top Egypt Destinations</h2>
-        <p>Discover the most popular tourist destinations & attractions</p>
+        <h6 class="head_sm_title">Explore Destinations</h6>
+        <h2 class="head_title">Top Egypt Destinations</h2>
+        <p class="head_text">Discover the most popular tourist destinations & attractions</p>
       </div>
 
       <div class="container">
@@ -831,8 +832,9 @@
           <img class="img_design_sec  tours_left_img" src="img/prymid.webp" alt="">
         <img class="img_design_sec  tours_right_img" src="img/image.webp" alt="">
       <div class="head_sec">
-        <h2>Most Popular Tours</h2>
-        <p>
+        <h6 class="head_sm_title">Explore Tours</h6>
+        <h2 class="head_title">Most Popular Tours</h2>
+        <p class="head_text">
           Discover our most loved tours and unforgettable experiences in Egypt
         </p>
       </div>
@@ -1630,8 +1632,9 @@
           <img class="img_design_sec  categories_left_img" src="img/121212fd.webp" alt="">
         <img class="img_design_sec  categories_right_img" src="img/1231255.webp" alt="">
             <div class="head_sec">
-        <h2>Safari Tours in Egypt & Boat Tours Categories</h2>
-        <p>Explore the best safari tours in Egypt, boat tours, diving excursions, and historical journeys</p>
+              <h6 class="head_sm_title">Boat Tours Categories</h6>
+        <h2 class="head_title">Safari Tours in Egypt & Boat Tours Categories</h2>
+        <p class="head_text">Explore the best safari tours in Egypt, boat tours, diving excursions, and historical journeys</p>
       </div>
 
         <div class="container swiper mySwiper categories-swiper">
@@ -1791,16 +1794,102 @@
         </div>
     </section>
 
+
+<section class="why_us">
+
+        <img class="img_design_sec  why_us_right_img" src="img/why-us.png" alt="">
+
+      <div class="container">
+
+        <div class="div_img">`
+
+          <a href="#" class="icon_arrow">
+            <i class="fas fa-arrow-right tall-arrow"></i>
+          </a>
+          <img class="img_big" src="img/about1.webp" alt="">
+          <img class="img_sm" src="img/bghero.webp" alt="">
+        </div>
+
+
+        <div class="div_text">
+          <h6 class="head_sm_title">Why we are</h6>
+          <h2 class="head_title">Why Choose Us<br>
+              you want to go</h2>
+          <p class="p_why_us">
+Why we areTravhub
+Why Choose Us
+content of a page when looking at layout the point
+of using lorem the is Ipsum less</p>
+
+          <div class="icon_text">
+            <div class="icon">
+              <i class="fas fa-map-marker-alt"></i>
+            </div>
+            <div class="text">
+              <h5>Personalized Trips</h5>
+              <p>Content of a page when looking at
+layout the point of using lorem the
+is Ipsum less normal</p>
+            </div>
+
+          </div>
+
+              <div class="icon_text">
+            <div class="icon">
+              <i class="fas fa-map-marker-alt"></i>
+            </div>
+            <div class="text">
+              <h5>Trusted Travel Guide</h5>
+              <p>Content of a page when looking at
+layout the point of using lorem the
+is Ipsum less normal</p>
+            </div>
+
+          </div>
+
+          <div class="bottom-section">
+            <div class="div_btns">
+              <a href="#" class="btn">Book Now <i class="fas fa-arrow-right arrow_rotate"></i></a>
+            </div>
+            
+            <div class="travellers-count">
+              <div class="traveller-avatars">
+                <div class="avatar">
+                  <img src="img/about1.webp" alt="Traveller 1">
+                </div>
+                <div class="avatar">
+                  <img src="img/about2.webp" alt="Traveller 2">
+                </div>
+                <div class="avatar">
+                  <img src="img/about1.webp" alt="Traveller 3">
+                </div>
+                <div class="plus-icon">
+                  <i class="fas fa-plus"></i>
+                </div>
+              </div>
+              <div class="count-text">
+                <span class="count">18k+</span>
+                <span class="label">Individual Traveller</span>
+              </div>
+            </div>
+        </div>
+
+        
+      </div>
+    </section>
+
+
+
     <!-- Contact Section -->
     <section class="egypt-contact-section">
         <div class="container">
             <div class="contact-header">
                 <!-- <img src="img/logo.png" alt="Egyptra" class="egyptra-logo"> -->
-                <h2 class="contact-title">
-                    <i class="fas fa-star-and-crescent"></i>
-                    Ready to Explore Egypt's Wonders?
-                </h2>
-                <p class="contact-subtitle">Egyptian travel experts are ready to help you plan the perfect Egyptian adventure. From ancient wonders to Red Sea paradise - choose your interests and we'll contact you within 2 hours with personalized recommendations!</p>
+                <div class="head_sec">
+              <h6 class="head_sm_title">Explore Egypt's Adventures</h6>
+        <h2 class="head_title">Safari Tours in Egypt & Boat Tours Categories</h2>
+        <p class="head_text">Discover thrilling desert safaris and unforgettable boat excursions across Egypt's most stunning landscapes and waterways.</p>
+      </div>
                 <div class="stats-row">
                     <div class="stat-item">
                         <strong>500+</strong>
