--- a/index.html
+++ b/index.html
@@ -1879,6 +1879,53 @@ is Ipsum less normal</p>
     </section>
 
 
+    <section class="widget_counter">
+      <div class="container">
+        <div class="top_text">
+          <div class="left_text">
+            <i class="fas fa-earth-americas"></i>
+          <div>
+            <h2 class="head_title">Egyptra Travel By The Numbers</h2>
+          <p class="head_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+
+        </div>
+        <a href="#" class="btn btn2">Contact Now</a>
+        </div>
+
+
+        <div class="widget_counter_items">
+
+          <div class="widget_counter_item">
+              <div class="icon"><i class="fas fa-calendar-alt"></i></div>
+              <p><span>15</span>+</p>
+              <h6>Years Experience</h6>
+          </div>
+
+
+          <div class="widget_counter_item">
+              <div class="icon"><i class="fas fa-smile"></i></div>
+              <p><span>50</span>K+</p>
+              <h6>Happy Travelers</h6>
+          </div>
+
+          <div class="widget_counter_item">
+              <div class="icon"><i class="fas fa-route"></i></div>
+              <p><span>2,500</span>+</p>
+              <h6>Tours Available</h6>
+          </div>
+
+
+          <div class="widget_counter_item">
+              <div class="icon"><i class="fas fa-star"></i></div>
+              <p><span>98</span>%</p>
+              <h6>Satisfaction Rate</h6>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
 
     <!-- Contact Section -->
     <section class="egypt-contact-section">
